--- a/index.html
+++ b/index.html
@@ -11,6 +11,13 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+		<meta property='og:title' content="הבלוג של אורי כץ"/>
+		<meta property='og:type' content='Article'/>
+		<meta property='og:site_name' content='Ori Katz'/>
+		<meta property='og:image' content='https://orikatz.com/images/oriprofile.jpg'/>
+		<meta property='og:url' content="http://orikatz.com"/>
+		<meta property='og:description' content="הבלוג של המשפטן מספר אחד במדינה"/>
+
 	</head>
 	<body class="is-preload">
 
